--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="elem" data-image="games-mecha.webp">
                 
                 <div class="overlay"></div>
-                <h2>community Discussion</h2>
+                <h2><a href="comm-dis.html">Community Discussion</a></h2>
 
             </div>
            </div>
