--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
             </div>
            </div>
         </div>
+        <footer class="footer j-padding-20">
+            <div style="width: 100%; padding-top:  10px; padding-bottom: 30px;">
+                <a href="#" class="foot-nav-frst" title="About">About</a>
+                <span class="foot-nav-frst">|</span>
+                <a class="foot-nav-frst" href="#" title="Contact">Contact</a>
+                <nav class="foot-nav-scnd">
+                    <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+                    <a href="#" title="YouTube"><i class="fab fa-youtube-square"></i></a>
+                    <a href="#" title="facebook"><i class="fab fa-facebook-square"></i></a>
+                </nav>
+            </div>
+            <p style="padding: 2em 3em;">This is made only for fun purpose.
+                Read <a href="#" style="font-size: medium; text-decoration: underline;" title="privacy policy">privacy
+                    policy</a>& <a href="#" style="font-size: medium; text-decoration: underline;"
+                    title="terms and condition"> terms and condition.</a></br> Copyright&#169 2021. All Rights
+                Reserved.</p>
+
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
