--- a/comm-dis.html
+++ b/comm-dis.html
@@ -21,35 +21,12 @@
     <div class="j-container">
         <div class="j-cmnt-container">
             <header class="j-hdr-container">
-                <!-- <div class="j-header  j-padding-20">
+                <div class="j-header  j-padding-20">
                 <a href="index.html" class="j-logo j-dis-flex j-button" title="home"> 
                     <img src="jaitriya-web-logo-svg.svg" alt="home" />
                 </a>
-                <span class="j-name">Jaitriya</span>
-                <div class="j-nevigation-button j-dis-flex j-button" title="nevigation button">
-                    <div class="j-nv-bar j-nv-layer1"></div>
-                    <div class="j-nv-bar j-nv-layer2"></div>
-                    <div class="j-nv-bar j-nv-layer3"></div>
-                </div>
+                <span class="j-name">Discussion Forum</span>
             </div>
-            <div class="j-header j-hdr-layer2 j-padding-20">
-                <nav class="j-menu-bar">
-                    <ul class="j-dis-flex licontainer">
-                        <li class="j-button bottomborder" title="blogs"><a href="blogs.html">blogs</a></li>
-                        <li title="comments" class="j-button bottomborder">
-                            <a href="comment.html" >commentry</a>
-                        </li>
-                        <li id="j-rgb-blink" class="j-button bottomborder" title="new-post">
-                            <a href="newb.html">new</a>
-                        </li>
-                        <li class="j-button bottomborder" title="comming-soon" >
-                            <a href="commings.html" >comming<span
-                                    class="j-come-dot1">.</span><span class="j-come-dot2">.</span><span
-                                    class="j-come-dot3">.</span></a>
-                        </li>
-                    </ul>
-                </nav>
-            </div> -->
             </header>
             <div class="j-padding-20 j-t-b-padding-10">
                 <div class="cmnt-poster" id="cmnt-badge"></div>
@@ -76,25 +53,7 @@
                     </div>
                 </section>
             </div>
-            <!-- <footer class="footer j-padding-20">
-            <div style="width: 100%; padding-top:  10px; padding-bottom: 30px;">
-                <a href="#" class="foot-nav-frst" title="About">About</a>
-                <span class="foot-nav-frst">|</span>
-                <a class="foot-nav-frst" href="#" title="Contact">Contact</a>
-                <nav class="foot-nav-scnd">
-                    <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
-                    <a href="#" title="YouTube"><i class="fab fa-youtube-square"></i></a>
-                    <a href="#" title="facebook"><i class="fab fa-facebook-square"></i></a>
-                </nav>
-            </div>
-            <p style="padding: 2em 3em;">This is made only for game. Please read all rights and rules and play at your
-                own risk, it can also be addictive.
-                Read <a href="#" style="font-size: medium; text-decoration: underline;" title="privacy policy">privacy
-                    policy</a>& <a href="#" style="font-size: medium; text-decoration: underline;"
-                    title="terms and condition"> terms and condition.</a></br> Copyright&#169 2021. All Rights
-                Reserved.</p>
-
-        </footer> -->
+            
         </div>
     </div>
     <script src="postcmnt.js"></script>
