--- a/comm-dis.html
+++ b/comm-dis.html
@@ -23,7 +23,7 @@
             <header class="j-hdr-container">
                 <div class="j-header  j-padding-20">
                 <a href="index.html" class="j-logo j-dis-flex j-button" title="home"> 
-                    <img src="jaitriya-web-logo-svg.svg" alt="home" />
+                    <img src="rebellion-squad.png" alt="home" />
                 </a>
                 <span class="j-name">Discussion Forum</span>
             </div>
