--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
             <div class="elem" data-image="game-Intro.webp">
                 
-                <div class="overlay" id="intro" onclick="window.location.href = 'introd.html';"></div>
-                <h2>Introduction</h2>
+                <div class="overlay" id="intro"></div>
+                <h2><a href="introd.html">Introduction</h2>
 
             </div>
             <div class="elem" data-image="games-developer.webp">
