--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             <div class="elem" data-image="players.webp">
                
                 <div class="overlay"></div>
-                <h2>Feedback</h2>
+                <h2>
+                     <a href="feedback.html">Feedback</a></h2>
 
             </div>
            
