--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div id="nav">
                 <img src="rebellion-squad.png"alt="">
                 <div id="nav-part2">
-                    <h4><a href="#">Games</a></h4>
+                    <h4><a href="https://poki.com/">Games</a></h4>
                     <h4><a href="#">Home</a></h4>
-                    <h4><a href="#">contact</a></h4>
+                    <h4><a href="www.linkedin.com/in/abhishek-singh-209320258">contact</a></h4>
                     
                     
                 </div>
@@ -143,7 +143,7 @@
         </div>
         <footer class="footer j-padding-20">
             <div style="width: 100%; padding-top:  10px; padding-bottom: 30px;">
-                <a href="#" class="foot-nav-frst" title="About">About</a>
+                <a href="www.linkedin.com/in/abhishek-singh-209320258" class="foot-nav-frst" title="About">About</a>
                 <span class="foot-nav-frst">|</span>
                 <a class="foot-nav-frst" href="#" title="Contact">Contact</a>
                 <nav class="foot-nav-scnd">
