--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="nav-part2">
                     <h4><a href="https://poki.com/">Games</a></h4>
                     <h4><a href="#">Home</a></h4>
-                    <h4><a id="loginOrProfile" href="www.linkedin.com/in/abhishek-singh-209320258">contact</a></h4>
+                    <h4><a href="www.linkedin.com/in/abhishek-singh-209320258">contact</a></h4>
                     <h4 id="loginOrProfile"><a href="login.html">Login</a></h4>
                     
                 </div>
