--- a/profile.html
+++ b/profile.html
@@ -11,9 +11,9 @@
         <div id="nav">
             <img src="rebellion-squad.png" alt="">
             <div id="nav-part2">
-                <h4><a href="#">Games</a></h4>
-                <h4><a href="#">Home</a></h4>
-                <h4><a href="#">Contact</a></h4>
+                <h4><a href="https://poki.com/">Games</a></h4>
+                <h4><a href="index.html">Home</a></h4>
+                <h4><a href="abhisheksonisingh44@gmail.com">Contact</a></h4>
                 <h4 id="loginOrProfile"><a href="login.html">Login</a></h4>
             </div>
         </div>
